fixed logo size on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -697,7 +697,7 @@ li.nav {
 	}
 
 	h1.logo {
-		font-size: 50px;
+		font-size: 40px;
 	}
 	h2.logo {
 		margin: 5px;
